# Saas_Project

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LOCAL_SETUP.md  Makefile  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_TUTORIAL.md  PROJECT_SUMMARY.md  README.md  VSCODE_SETUP_GUIDE.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/: manage.py
backend/apps/authentication/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/core/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/dashboard/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/subscriptions/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/tenants/: admin.py  apps.py  models.py  tests.py
backend/saas_platform/: asgi.py  settings.py  urls.py  wsgi.py
backend/static/css/: dashboard.css
backend/static/js/: dashboard.js
backend/templates/: dashboard.html  index.html
database/: schema.sql
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/: DOCKER_GUIDE.md  REQUIREMENTS_EXPLANATION.md  setup_guide.md  testing_guide.md
docs/code_explanations/: BACKEND_EXPLANATION.md  DATABASE_EXPLANATION.md  FRONTEND_EXPLANATION.md
frontend/: index.html
frontend/css/: main.css
frontend/js/: main.js
